test/parse/fail/backslash.em
# Ought to fail: No backslash after .
# Arg: --ast
# Expect failure

x.\y
